force-app/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__EligibleParty__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EligibleParty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Presence/Absent indicator. Certification by the U.S. exporter that the exporter is an eligible party to participate in the defense trade</description>
    <inlineHelpText>Presence/Absent indicator. Certification by the U.S. exporter that the exporter is an eligible party to participate in the defense trade</inlineHelpText>
    <label>Eligible Party</label>
    <type>Checkbox</type>
</CustomField>