force-app/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__ForwardingAgentCity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ForwardingAgentCity__c</fullName>
    <label>Forwarding Agent City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>