force-app/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__ForwardingAgentCompanyName__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ForwardingAgentCompanyName__c</fullName>
    <label>Forwarding Agent Company Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>