force-app/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__ForwardingAgentCountryCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ForwardingAgentCountryCode__c</fullName>
    <label>Forwarding Agent Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>