force-app/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__LicenseCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LicenseCode__c</fullName>
    <description>The standard license code published by US government (from C30 to C60)</description>
    <inlineHelpText>The standard license code published by US government (from C30 to C60)</inlineHelpText>
    <label>License Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>