force-app/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__LicenseLineValue__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LicenseLineValue__c</fullName>
    <description>The export monetary amount allowed per license. Required for a licensable product when the EEI form is selected</description>
    <inlineHelpText>The export monetary amount allowed per license. Required for a licensable product when the EEI form is selected</inlineHelpText>
    <label>License Line Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>