force-app/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__RegistrationNumber__c</fullName>
    <description>It is a unique registration code assigned to the registrant. The DDTC registration code consist of a letter prefix, M (assigned to a manufacturer and/or exporter) or K (assigned to a broker), followed by four or five digits (e.g. K-1234 or M12345)</description>
    <inlineHelpText>It is a unique registration code assigned to the registrant. The DDTC registration code consist of a letter prefix, M (assigned to a manufacturer and/or exporter) or K (assigned to a broker), followed by four or five digits (e.g. K-1234 or M12345)</inlineHelpText>
    <label>Registration Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>