force-app/main/default/objects/zkmulti__EEIForm__c/fields/zkmulti__UltimateConsigneePostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__UltimateConsigneePostalCode__c</fullName>
    <label>Ultimate Consignee Postal Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>