force-app/main/default/objects/zkmulti__EEIForm__c/validationRules/zkmulti__CheckUltimate_Consignee_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>zkmulti__CheckUltimate_Consignee_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(zkmulti__EEIFillingType__c)=&apos;Shipper filed&apos;,TEXT(zkmulti__UltimateConsigneeType__c) = null)</errorConditionFormula>
    <errorDisplayField>zkmulti__UltimateConsigneeType__c</errorDisplayField>
    <errorMessage>Please select option</errorMessage>
</ValidationRule>