force-app/main/default/objects/zkmulti__EEIForm__c/validationRules/zkmulti__filed_check.validationRule-meta.xml
<ValidationRule>
    <fullName>zkmulti__filed_check</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(zkmulti__EEIFillingType__c)=&apos;UPS filed&apos;</errorConditionFormula>
    <errorDisplayField>zkmulti__EEIFillingType__c</errorDisplayField>
    <errorMessage>&apos;UPS filled&apos; option is not supported.</errorMessage>
</ValidationRule>