force-app/main/default/objects/zkmulti__EEIForm__c/validationRules/zkmulti__Requires_the_Exemption_Legend_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>zkmulti__Requires_the_Exemption_Legend_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(zkmulti__EEIShipper__c)=&apos;Requires the Exemption Legend&apos;,TEXT(zkmulti__ExemptionLegend__c)=null)</errorConditionFormula>
    <errorDisplayField>zkmulti__ExemptionLegend__c</errorDisplayField>
    <errorMessage>Please select option</errorMessage>
</ValidationRule>