force-app/main/default/objects/zkmulti__EEIForm__c/validationRules/zkmulti__Requires_the_ITN_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>zkmulti__Requires_the_ITN_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(zkmulti__EEIShipper__c)=&apos;Requires the ITN&apos;,zkmulti__PreDepartureITNNumber__c=null)</errorConditionFormula>
    <errorDisplayField>zkmulti__PreDepartureITNNumber__c</errorDisplayField>
    <errorMessage>Please fill field</errorMessage>
</ValidationRule>